--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -25,7 +25,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=eDP-1,highres,auto,1.25
+monitor=HDMI-A-1,highres,auto,1
 
 
 ###################
@@ -54,7 +55,9 @@ $menu = rofi --show drun
  exec-once = pipewire-pulse
 # exec-once = waybar & hyprpaper & firefox
  exec-once = waybar
-
+  exec-once = hyprpaper
+  exec-once = hyprcursor
+  # exec-once = hyprlock
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -62,8 +65,9 @@ $menu = rofi --show drun
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+env = HYPRCURSOR_SIZE,28
+env = HYPRCURSOR_THEME,catppuccin-mocha-red
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
 
 
 #####################
@@ -80,8 +84,8 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgb(fc50b4) rgb(7ac3ff) 45deg
+    col.inactive_border = rgb(24273a)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false 
@@ -144,8 +148,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -166,7 +170,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -194,7 +198,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, o, exec, wezterm
 bind = $mainMod, p, exec, vivaldi
-bind = $mainMod, C, killactive,
+bind = ALT_SHIFT, W, killactive,
 bind = $mainMod, a, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
