--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -65,9 +65,11 @@ $menu = rofi --show drun
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = HYPRCURSOR_SIZE,28
-env = HYPRCURSOR_THEME,catppuccin-mocha-red
+# env = HYPRCURSOR_SIZE,28
+# env = HYPRCURSOR_THEME,catppuccin-mocha-red
 env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,catppuccin-mocha-red
+
 
 
 #####################
