erlang_ls and wezterm

--- a/lsp/erlang_ls.config
+++ b/lsp/erlang_ls.config
@@ -1,5 +1,8 @@
-otp_path: "/.nix-profile/lib/erlang"
+otp_path: "/nix/store/q6m94crcwhakizc23d3zkkaskb4a95z9-erlang-26.2.5/lib/erlang"
 deps_dirs:
+  - "_build/*/lib/*"
+  - "_build/*/lib/*/include"
+  - "_build/*/lib/*/include/*"
   - "lib/*"
 diagnostics:
   enabled:
@@ -8,14 +11,22 @@ diagnostics:
     - bound_var_in_pattern
 apps_dirs:
   - "apps/*"
-  - "_build/default/lib/*"
+  - "_build/*/lib/*"
+  - "_build/*/lib/*/include"
+  - "_build/*/lib/*/include/*"
+  - "lib/*"
+  - "."
 include_dirs:
   - "apps"
   - "apps/*/include"
   - "include"
+  - "include/*"
+  - "."
+  - ".."
   - "src"
-  - "_build/default/lib"
-  - "_build/default/lib/*/include"
+  - "_build/*/lib"
+  - "_build/*/lib/*/include"
+  - "_build/*/lib/*/include/*"
   - "extras"
   - "test"
   - "test/*_data"
