--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -25,7 +25,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,highres,auto,1.25
+monitor=eDP-1,highres,auto,1
 monitor=HDMI-A-1,highres,auto,1
 
 
@@ -53,10 +53,12 @@ $menu = rofi --show drun
  exec-once = pipewire
  exec-once = wireplumber
  exec-once = pipewire-pulse
+ exec-once = xsettingsd
 # exec-once = waybar & hyprpaper & firefox
  exec-once = waybar
   exec-once = hyprpaper
-  exec-once = hyprcursor
+  exec-once = hyprctl setCursor catppuccin-mocha-red-cursors 24
+   exec-once = hyprcursor
   # exec-once = hyprlock
 
 #############################
@@ -65,10 +67,10 @@ $menu = rofi --show drun
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-# env = HYPRCURSOR_SIZE,28
-# env = HYPRCURSOR_THEME,catppuccin-mocha-red
-env = XCURSOR_SIZE,24
-env = XCURSOR_THEME,catppuccin-mocha-red
+  env = HYPRCURSOR_SIZE,24
+  env = HYPRCURSOR_THEME,catppuccin-mocha-red-cursors
+	env = XCURSOR_SIZE,24
+  env = XCURSOR_THEME,catppuccin-mocha-red-cursors
 
 
 
@@ -198,6 +200,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, b, exec, kitty
 bind = $mainMod, o, exec, wezterm
 bind = $mainMod, p, exec, vivaldi
 bind = ALT_SHIFT, W, killactive,
@@ -206,7 +209,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, z, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, s, togglesplit, # dwindle
 # Move window
 bind = ALT_SHIFT, u, movewindow, l
 bind = ALT_SHIFT, p, movewindow, r
@@ -220,10 +223,10 @@ bind = ALT_SHIFT, K, movefocus, u
 bind = ALT_SHIFT, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
+bind = $mainMod, h, workspace, 1
+bind = $mainMod, j, workspace, 2
+bind = $mainMod, k, workspace, 3
+bind = $mainMod, l, workspace, 4
 bind = $mainMod, 5, workspace, 5
 bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
@@ -232,10 +235,10 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, h, movetoworkspace, 1
+bind = $mainMod SHIFT, j, movetoworkspace, 2
+bind = $mainMod SHIFT, k, movetoworkspace, 3
+bind = $mainMod SHIFT, l, movetoworkspace, 4
 bind = $mainMod SHIFT, 5, movetoworkspace, 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
@@ -244,8 +247,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
