--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -202,6 +202,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, b, exec, kitty
 bind = $mainMod, o, exec, wezterm
+bind = $mainMod, i, exec, spotify
+bind = $mainMod, d, exec, hyprlock
 bind = $mainMod, p, exec, vivaldi
 bind = ALT_SHIFT, W, killactive,
 bind = $mainMod, a, exit,
@@ -209,7 +211,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, z, pseudo, # dwindle
-bind = $mainMod, s, togglesplit, # dwindle
+bind = ALT_SHIFT, s, togglesplit, # dwindle
 # Move window
 bind = ALT_SHIFT, u, movewindow, l
 bind = ALT_SHIFT, p, movewindow, r
