--- a/hyper/hyprlock.conf
+++ b/hyper/hyprlock.conf
@@ -3,8 +3,9 @@ general {
 }
 
 background {
-	monitor = ~/.dotfiles/wallpapers/cyber_whale.jpg
-		color = rgba(25, 20, 20, 1.0)
+	monitor = 
+	path = ~/.dotfiles/wallpapers/mks_color_ver2.png
+		color = rgba(36, 39, 58, 1)
 
 # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
 		blur_passes = 0 # 0 disables blurring
@@ -18,31 +19,44 @@ background {
 
 input-field {
 	monitor = 
-		size = 200, 50
+		size = 215, 50
 		outline_thickness = 3
 		dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
 		dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
 		dots_center = false
 		dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-		outer_color = rgb(151515)
-		inner_color = rgb(200, 200, 200)
-		font_color = rgb(10, 10, 10)
+		outer_color = rgb(235, 135,182)
+		inner_color = rgb(36, 39, 58)
+		font_color = rgb(235, 135,182)
 		fade_on_empty = true
-		fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
+		fade_timeout = 3000 # Milliseconds before fade_on_empty is triggered.
 		placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
 		hide_input = false
 		rounding = -1 # -1 means complete rounding (circle/oval)
-		check_color = rgb(204, 136, 34)
-		fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
+		check_color = rgb(122, 195, 255)
+		fail_color = rgb(252, 80, 180) # if authentication failed, changes outer_color and fail message color
 		fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
 		fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-		capslock_color = -1
+		capslock_color = rgb(209, 121, 238)
 		numlock_color = -1
-		bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
+		bothlock_color = rgb(209, 121, 238) # when both locks are active. -1 means don't change outer color (same for above)
 		invert_numlock = false # change color if numlock is off
 		swap_font_color = false # see below
 
-		position = 0, -20
+		position = -470, -20
 		halign = center
 		valign = center
+}
+
+label {
+monitor = 
+text = $TIME
+text_align = dots_center
+		color = rgb(235, 135,182)
+		font_size = 50
+		font_family = ComicShannsMono Nerd Font
+		position = 420, -20
+		halign = center
+		valign = center
+
 }
