--- a/status/waybar/config
+++ b/status/waybar/config
@@ -2,38 +2,31 @@
   "layer": "bottom",
   "position": "top",
   "height": 24,
-  "spacing": 5,
   "modules-left": ["cpu","memory",],
   "modules-center": ["pulseaudio","clock"],
-  "modules-right": ["battery","network", "tray"],
-  "idle_inhibitor": {
-    "format": "{icon}",
-    "format-icons": {
-      "activated": "\uf06e",
-      "deactivated": "\uf070"
-    }
-  },
+  "modules-right": ["battery","network", "hyprland/workspaces"],
   "cpu": { 
     "interval": 10, 
     "format": "󰻠 {usage}%" 
   },
   "memory": {
     "interval": 30,
-    "format": "  {used:0.1f}GiB/{total:0.1f}GiB ({percentage}%) SWAP: {swapUsed:0.1f}GiB/{swapTotal:0.1f}GiB ({swapPercentage}%)"
+    "format": "  {percentage}% 󰓡 {swapPercentage}%"
   },
   "battery": {
     "bat": "BAT0",
+	"spacing": 0,
     "states": {
       "good": 95,
       "warning": 30,
       "critical": 5
     },
-    "format": "  {capacity}%",
-    "format-charging": "  {capacity}% (charging)",
-    "format-plugged": "  {capacity}% (plugged)",
+    "format": " {capacity}%",
+    "format-charging": " {capacity}% (charging)",
+    "format-plugged": " {capacity}% (plugged)",
   },
   "clock": {
-    "format": "{:%Y/%m/%d %H:%M}",
+    "format": " 󰐝 {:%H:%M}",
     "tooltip-format": "<tt><small>{calendar}</small></tt>",
     "calendar": {
       "format": {
@@ -45,17 +38,28 @@
   "pulseaudio": {
     "format": "{icon} {volume}%",
     "format-icons": {
-      "default": ["\uf026", "\uf027", "\uf028"]
+      "default": ["󰕿", "󰖀", "󰕾"]
     },
     "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
     "on-click-right": "pavucontrol",
-    "format-muted": "\uf00d {volume}%"
+    "format-muted": "󰖁 {volume}%"
   },
   "network": {
     "format": "{ifname}",
-    "format-wifi": "{essid}   ({signalStrength}%) ",
-    "format-disconnected": "", //An empty format will hide the module.
+    "format-wifi": "  {signalStrength}% {essid}",
+    "format-disconnected": "󰤯", //An empty format will hide the module.
+    "on-click-right": "nm-connection-editor",
 },
+"hyprland/workspaces": {
+"active-only": true,
+"format": "{icon}",
+	"format-icons": {
+		"1": "󰣘",
+		"2": "󰣙",
+		"3": "",
+		"4": "",
+		"default": "󰻀"
+	},},
 "tray": {
     "icon-size": 20,
     "spacing": 10
