--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -38,7 +38,9 @@ monitor=HDMI-A-1,highres,auto,1
 # Set programs that you use
 $terminal = wezterm
 $fileManager = dolphin
-$menu = rofi --show drun
+$menu = rofi -show drun
+$browser = vivaldi
+$music = spotify --enable-chrome-browser-cloud-management
 
 
 #################
@@ -105,8 +107,8 @@ decoration {
     rounding = 10
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.9
+    inactive_opacity = 0.9
 
     drop_shadow = true
     shadow_range = 4
@@ -122,6 +124,9 @@ decoration {
         vibrancy = 0.1696
     }
 }
+
+windowrulev2 = opacity 1.0 override, title:(wezterm)
+windowrulev2=opacity 1.0 override,class:^(Vivaldi-stable)$, title:(.*)(- YouTube)(.*)$
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
@@ -199,12 +204,11 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, b, exec, kitty
-bind = $mainMod, o, exec, wezterm
-bind = $mainMod, i, exec, spotify
+bind = $mainMod, o, exec, $terminal
+bind = $mainMod, i, exec, $music
 bind = $mainMod, d, exec, hyprlock
-bind = $mainMod, p, exec, vivaldi
+bind = $mainMod, p, exec, $browser
 bind = ALT_SHIFT, W, killactive,
 bind = $mainMod, a, exit,
 bind = $mainMod, E, exec, $fileManager
