--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -264,6 +264,10 @@ bind = , xf86audioraisevolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , xf86audiolowervolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous 
+bind = , XF86AudioPlay, exec, playerctl play-pause
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
