thunderbird and fullscreen hyprland

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -205,6 +205,7 @@ bind = $mainMod, o, exec, $terminal
 bind = $mainMod, i, exec, $music
 bind = $mainMod, d, exec, hyprlock
 bind = $mainMod, p, exec, $browser
+bind = $mainMod, f, exec, fullscreen
 bind = ALT_SHIFT, W, killactive,
 bind = $mainMod, a, exit,
 bind = $mainMod, E, exec, $fileManager
