laptop lid and wezterm update

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -282,4 +282,7 @@ bind = , XF86AudioPlay, exec, playerctl play-pause
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
+bindl = , switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
+bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, highres, auto, 1"
+
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
