--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -25,8 +25,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,highres,auto,1
-monitor=HDMI-A-1,highres,auto,1
+monitor=eDP-1,highres,0x0,1
+monitor=DP-1,1920x1080@60,1920x0,1,transform, 1
+monitor=HDMI-A-1,2560x1440@60,3000x0,1
 
 
 ###################
