--- a/hyper/hyprpaper.conf
+++ b/hyper/hyprpaper.conf
@@ -1,3 +1,4 @@
 preload = ~/.dotfiles/wallpapers/cyber_whale.jpg
 wallpaper =eDP-1,~/.dotfiles/wallpapers/cyber_whale.jpg
 wallpaper =HDMI-A-1,~/.dotfiles/wallpapers/cyber_whale.jpg
+wallpaper =DP-1,~/.dotfiles/wallpapers/cyber_whale.jpg
