2nd monitor setup

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -26,8 +26,9 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,highres,0x0,1
-monitor=DP-1,1920x1080@60,1920x0,1,transform, 1
-monitor=HDMI-A-1,2560x1440@60,3000x0,1
+monitor=DP-1,2560x1440@120,3000x0,1, bitdepth, 10
+# monitor=DP-1,1920x1080@120,3000x0,1
+monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform, 1
 
 
 ###################
@@ -57,6 +58,7 @@ exec-once = pipewire
 exec-once = wireplumber
 exec-once = pipewire-pulse
 exec-once = xsettingsd
+exec-once = NetworkManager
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
 exec-once = hyprpaper
