--- a/hyper/hyprpaper.conf
+++ b/hyper/hyprpaper.conf
@@ -1,4 +1,5 @@
 preload = ~/.dotfiles/wallpapers/cyber_whale.jpg
+preload = ~/.dotfiles/wallpapers/cyber_drake.jpg
 wallpaper =eDP-1,~/.dotfiles/wallpapers/cyber_whale.jpg
 wallpaper =HDMI-A-1,~/.dotfiles/wallpapers/cyber_drake.jpg
-wallpaper =DP-1,~/.dotfiles/wallpapers/cyber_drake.jpg
+wallpaper =DP-1,~/.dotfiles/wallpapers/cyber_whale.jpg
