wireshark and waybar update

--- a/lsp/erlang_ls.config
+++ b/lsp/erlang_ls.config
@@ -1,8 +1,10 @@
-otp_path: "/nix/store/cy2dmq8vki2hzqag991db96i0jdwhlls-erlang-27.0.1/lib/erlang"
 deps_dirs:
   - "_build/*/lib/*"
   - "_build/*/lib/*/include"
   - "_build/*/lib/*/include/*"
+  - "_build/*/checkouts/*"
+  - "_build/*/checkouts/*/include"
+  - "_build/*/checkouts/*/include/*"
   - "lib/*"
 diagnostics:
   enabled:
@@ -14,6 +16,9 @@ apps_dirs:
   - "_build/*/lib/*"
   - "_build/*/lib/*/include"
   - "_build/*/lib/*/include/*"
+  - "_build/*/checkouts/*"
+  - "_build/*/checkouts/*/include"
+  - "_build/*/checkouts/*/include/*"
   - "lib/*"
   - "."
 include_dirs:
@@ -27,6 +32,9 @@ include_dirs:
   - "_build/*/lib"
   - "_build/*/lib/*/include"
   - "_build/*/lib/*/include/*"
+  - "_build/*/checkouts"
+  - "_build/*/checkouts/*/include"
+  - "_build/*/checkouts/*/include/*"
   - "extras"
   - "test"
   - "test/*_data"
