--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -25,7 +25,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,highres,0x0,1
+monitor=eDP-1,highres,0x0,1.5
 monitor=DP-1,2560x1440@120,3000x0,1, bitdepth, 10
 # monitor=DP-1,1920x1080@120,3000x0,1
 monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
@@ -127,6 +127,12 @@ decoration {
 
 				vibrancy = 0.1696
 		}
+}
+
+group {
+	groupbar {
+		render_titles = false
+	}
 }
 
 windowrulev2 = opacity 1.0 override, title:(wezterm)
