hyprpanel, wezterm fps, waybar

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -26,12 +26,17 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,highres,0x0,1.5
-monitor=DP-1,2560x1440@120,3000x0,1, bitdepth, 10
-# monitor=DP-1,1920x1080@120,3000x0,1
+monitor=DP-1,2560x1440@144,3000x0,1, bitdepth, 10
 monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
 # monitor=HDMI-A-1,highres,1920x0,1 # office
 
+# Workspaces on DP-1
+monitor=DP-1,workspace,3
+monitor=DP-1,workspace,4
 
+# Workspaces on HDMI-A-1
+monitor=HDMI-A-1,workspace,1
+monitor=HDMI-A-1,workspace,2
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -54,7 +59,7 @@ $music = spotify --enable-chrome-browser-cloud-management
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = nm-applet 
+# exec-once = nm-applet 
 exec-once = pipewire
 exec-once = wireplumber
 exec-once = pipewire-pulse
