waybar fixes, removed hyprpanel added mako notify

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -30,13 +30,6 @@ monitor=DP-1,2560x1440@144,3000x0,1, bitdepth, 10
 monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
 # monitor=HDMI-A-1,highres,1920x0,1 # office
 
-# Workspaces on DP-1
-monitor=DP-1,workspace,3
-monitor=DP-1,workspace,4
-
-# Workspaces on HDMI-A-1
-monitor=HDMI-A-1,workspace,1
-monitor=HDMI-A-1,workspace,2
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -59,12 +52,13 @@ $music = spotify --enable-chrome-browser-cloud-management
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-# exec-once = nm-applet 
+exec-once = nm-applet 
+exec-once = mako 
 exec-once = pipewire
 exec-once = wireplumber
 exec-once = pipewire-pulse
 exec-once = xsettingsd
-exec-once = NetworkManager
+# exec-once = sudo NetworkManager
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
 exec-once = hyprpaper
@@ -216,6 +210,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, b, exec, kitty
+bind = $mainMod, n, exec, makoctl dismiss -a
 bind = $mainMod, o, exec, $terminal
 bind = $mainMod, i, exec, $music
 bind = $mainMod, d, exec, hyprlock
