added kitty config and xwayland wezterm fix

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -25,10 +25,14 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,highres,0x0,1.5
+monitor=eDP-1,1920x1200@60,0x0,1.5, bitdepth, 10
 monitor=DP-1,2560x1440@144,3000x0,1, bitdepth, 10
 monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
 # monitor=HDMI-A-1,highres,1920x0,1 # office
+
+xwayland {
+force_zero_scaling = true
+}
 
 ###################
 ### MY PROGRAMS ###
@@ -135,6 +139,7 @@ group {
 }
 
 windowrulev2 = opacity 1.0 override, title:(wezterm)
+windowrulev2 = opacity 1.0 override, title:(kitty)
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
