--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -140,6 +140,9 @@ group {
 
 windowrulev2 = opacity 1.0 override, title:(wezterm)
 windowrulev2 = opacity 1.0 override, title:(kitty)
+windowrulev2 = workspace 1, title:^(Spotify Premium)$
+windowrulev2 = workspace 2, class:^(vivaldi-stable)$
+windowrulev2 = workspace 3, class:^(org.wezfurlong.wezterm)$
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
