bind workspace to home monitors

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -144,6 +144,11 @@ windowrulev2 = workspace 1, title:^(Spotify Premium)$
 windowrulev2 = workspace 2, class:^(vivaldi-stable)$
 windowrulev2 = workspace 3, class:^(org.wezfurlong.wezterm)$
 
+workspace = 1,monitor:HDMI-A-1
+workspace = 2,monitor:HDMI-A-1
+workspace = 3,monitor:DP-1
+workspace = 4,monitor:DP-1
+
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
 	enabled = true
