ibus setup for wezterm and cro letters

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -69,6 +69,7 @@ exec-once = hyprpaper
 exec-once = hyprctl setCursor catppuccin-mocha-red-cursors 24
 exec-once = hyprcursor
 # exec-once = hyprlock
+exec-once = ibus-daemon -d -x -n wayland &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
