change: ibus -> fcitx

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -68,6 +68,7 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = hyprctl setCursor catppuccin-mocha-red-cursors 24
 exec-once = hyprcursor
+exec-once = fcitx5
 # exec-once = hyprlock
 # exec-once = ibus-daemon -d -x -n wayland &
 
