pkg added: ghostty

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -141,6 +141,7 @@ group {
 }
 
 windowrulev2 = opacity 1.0 override, title:(wezterm)
+windowrulev2 = opacity 1.0 override, title:(ghostty)
 windowrulev2 = opacity 1.0 override, title:(kitty)
 windowrulev2 = workspace 1, title:^(Spotify Premium)$
 windowrulev2 = workspace 2, class:^(vivaldi-stable)$
