--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -225,9 +225,10 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, b, exec, kitty
+bind = $mainMod, b, exec, ghostty
 bind = $mainMod, n, exec, makoctl dismiss -a
-bind = $mainMod, o, exec, $terminal
+# bind = $mainMod, o, exec, $terminal
+bind = $mainMod, o, exec, [float;tile] wezterm start --always-new-process
 bind = $mainMod, i, exec, $music
 bind = $mainMod, d, exec, hyprlock
 bind = $mainMod, p, exec, $browser
