feat: autologin, neovim home-screen, wezterm changes

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -26,8 +26,10 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,1920x1200@60,0x0,1.5, bitdepth, 10
-monitor=DP-1,2560x1440@144,3000x0,1, bitdepth, 10
-monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
+monitor=DP-10,2560x1440@165,3000x0,1, bitdepth, 10
+monitor=DP-8,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
+# monitor=DP-1,2560x1440@144,3000x0,1, bitdepth, 10
+# monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
 # monitor=HDMI-A-1,highres,1920x0,1 # office
 
 xwayland {
@@ -42,6 +44,7 @@ force_zero_scaling = true
 
 # Set programs that you use
 $terminal = wezterm
+$sound = pavucontrol
 $fileManager = dolphin
 $menu = rofi -show drun
 $browser = vivaldi
@@ -58,9 +61,14 @@ $music = spotify --enable-chrome-browser-cloud-management
 # exec-once = $terminal
 exec-once = nm-applet 
 exec-once = mako 
-exec-once = pipewire
-exec-once = wireplumber
-exec-once = pipewire-pulse
+# zvukovi
+# exec-once = sleep 5 && pipewire
+# exec-once = sleep 5 && wireplumber
+# exec-once = sleep 5 && pipewire-pulse
+#
+# rijesenje za zuvk privremeno 
+exec-once = systemctl --user restart pipewire wireplumber pipewire-pulse
+#
 exec-once = xsettingsd
 # exec-once = sudo NetworkManager
 # exec-once = waybar & hyprpaper & firefox
@@ -69,6 +77,9 @@ exec-once = hyprpaper
 exec-once = hyprctl setCursor catppuccin-mocha-red-cursors 24
 exec-once = hyprcursor
 exec-once = fcitx5
+
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 # exec-once = hyprlock
 # exec-once = ibus-daemon -d -x -n wayland &
 
@@ -140,17 +151,18 @@ group {
 	}
 }
 
-windowrulev2 = opacity 1.0 override, title:(wezterm)
+windowrulev2 = opacity 1.0 override, class:^(org.wezfurlong.wezterm)$
 windowrulev2 = opacity 1.0 override, title:(ghostty)
 windowrulev2 = opacity 1.0 override, title:(kitty)
 windowrulev2 = workspace 1, title:^(Spotify Premium)$
 windowrulev2 = workspace 2, class:^(vivaldi-stable)$
 windowrulev2 = workspace 3, class:^(org.wezfurlong.wezterm)$
+windowrulev2 = workspace 3, class:^(pavucontrol)$
 
-workspace = 1,monitor:HDMI-A-1
-workspace = 2,monitor:HDMI-A-1
-workspace = 3,monitor:DP-1
-workspace = 4,monitor:DP-1
+workspace = 1,monitor:DP-8
+workspace = 2,monitor:DP-8
+workspace = 3,monitor:DP-10
+workspace = 4,monitor:eDP-1
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
@@ -224,22 +236,25 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, b, exec, ghostty
 bind = $mainMod, n, exec, makoctl dismiss -a
+bind = $mainMod, t, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 # bind = $mainMod, o, exec, $terminal
 bind = $mainMod, o, exec, [float;tile] wezterm start --always-new-process
 bind = $mainMod, i, exec, $music
 bind = $mainMod, d, exec, hyprlock
 bind = $mainMod, p, exec, $browser
 bind = $mainMod, f, exec, fullscreen
+bind = $mainMod, s, exec, $sound
 bind = ALT_SHIFT, W, killactive,
 bind = $mainMod, a, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, z, pseudo, # dwindle
-bind = ALT_SHIFT, s, togglesplit, # dwindle
+bind = ALT_SHIFT, s, togglesplit,  
 # Move window
 bind = ALT_SHIFT, u, movewindow, l
 bind = ALT_SHIFT, p, movewindow, r
