--- a/hyper/hyprpaper.conf
+++ b/hyper/hyprpaper.conf
@@ -2,4 +2,7 @@ preload = ~/.dotfiles/wallpapers/cyber_whale.jpg
 preload = ~/.dotfiles/wallpapers/cyber_drake.jpg
 wallpaper =eDP-1,~/.dotfiles/wallpapers/cyber_whale.jpg
 wallpaper =HDMI-A-1,~/.dotfiles/wallpapers/cyber_drake.jpg
+wallpaper =DP-8,~/.dotfiles/wallpapers/cyber_drake.jpg
 wallpaper =DP-1,~/.dotfiles/wallpapers/cyber_whale.jpg
+wallpaper =DP-10,~/.dotfiles/wallpapers/cyber_whale.jpg
+wallpaper =DP-2,~/.dotfiles/wallpapers/cyber_whale.jpg
