nixos_verson_update 24.05 -> 24.11

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -78,8 +78,6 @@ exec-once = hyprctl setCursor catppuccin-mocha-red-cursors 24
 exec-once = hyprcursor
 exec-once = fcitx5
 
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 # exec-once = hyprlock
 # exec-once = ibus-daemon -d -x -n wayland &
 
@@ -127,22 +125,16 @@ decoration {
 	rounding = 10
 
 # Change transparency of focused and unfocused windows
-		active_opacity = 0.9
-		inactive_opacity = 0.9
-
-		drop_shadow = true
-		shadow_range = 4
-		shadow_render_power = 3
-		col.shadow = rgba(1a1a1aee)
-
+	active_opacity = 0.9
+	inactive_opacity = 0.9
 # https://wiki.hyprland.org/Configuring/Variables/#blur
-		blur {
-			enabled = false
-				size = 3
-				passes = 1
+	blur {
+		enabled = false
+			size = 3
+			passes = 1
 
-				vibrancy = 0.1696
-		}
+			vibrancy = 0.1696
+	}
 }
 
 group {
@@ -240,9 +232,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, b, exec, ghostty
 bind = $mainMod, n, exec, makoctl dismiss -a
-bind = $mainMod, t, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-# bind = $mainMod, o, exec, $terminal
-bind = $mainMod, o, exec, [float;tile] wezterm start --always-new-process
+bind = $mainMod, o, exec, $terminal
+# bind = $mainMod, o, exec, [float;tile] wezterm start --always-new-process
 bind = $mainMod, i, exec, $music
 bind = $mainMod, d, exec, hyprlock
 bind = $mainMod, p, exec, $browser
