--- a/xda_apps/xsettingsd.conf
+++ b/xda_apps/xsettingsd.conf
@@ -1,7 +1,8 @@
-Gdk/UnscaledDPI 98304
+# Gdk/UnscaledDPI 98304
+Gdk/UnscaledDPI 0
 Gdk/WindowScalingFactor 1
 Gtk/EnableAnimations 1
-Gtk/DecorationLayout "icon:minimize,maximize,close"
+Gtk/DecorationLayout "icon:"
 Gtk/PrimaryButtonWarpsSlider 1
 Gtk/ToolbarStyle 3
 Gtk/MenuImages 1
