--- a/status/waybar/config
+++ b/status/waybar/config
@@ -4,7 +4,7 @@
 		"margin-top": 10,
 		"height": 30,
 		"modules-left": ["cpu","memory"],
-		"modules-center": ["pulseaudio","clock"],
+		"modules-center": ["pulseaudio","clock","custom/mic"],
 		"modules-right": ["battery","bluetooth","network", "hyprland/workspaces"],
 		"cpu": { 
 			"interval": 10, 
@@ -27,7 +27,7 @@
 			"format-plugged": " {capacity}% ",
 		},
 		"clock": {
-			"format": " 󰐝 {:%H:%M}",
+			"format": "󰐝 {:%H:%M}",
 			"tooltip-format": "<tt><small>{calendar}</small></tt>",
 			"calendar": {
 				"format": {
@@ -43,8 +43,18 @@
 				"default": ["󰕿", "󰖀", "󰕾"]
 			},
 			"on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
-			"on-click-right": "pavucontrol",
+			"on-click-right": "pavucontrol --tab=3",
 			"format-muted": "󰖁 {volume}%"
+		},
+		"custom/mic": {
+			"return-type":"json",
+			"exec": "~/.dotfiles/scripts/mic.sh",
+			"exec-on-event": true,
+			"format": " {}",
+			"on-click": "pactl set-source-mute @DEFAULT_SOURCE@ toggle &&  pkill -RTMIN+8 waybar",
+			"on-click-right": "pavucontrol --tab=4",
+			"tooltip": false,
+			"signal": 8
 		},
 		"bluetooth": {
 			"on-click": "blueman-manager",
@@ -66,7 +76,8 @@
 				"1": "󰣘",
 				"2": "󰣙",
 				"3": "",
-				"4": "",
+				"4": "",
+				"5": "",
 				"default": "󰻀"
 			},
 		},
