--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -25,9 +25,10 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,1920x1200@60,0x0,1.5, bitdepth, 10
-monitor=DP-10,2560x1440@165,3000x0,1, bitdepth, 10
-monitor=DP-8,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
+monitor=eDP-1,1920x1200@60,0x0,1.5 
+monitor=DP-10,2560x1440@165,3000x0,1
+# monitor=DP-8,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
+monitor=DP-9,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
 # monitor=DP-1,2560x1440@144,3000x0,1, bitdepth, 10
 # monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
 # monitor=HDMI-A-1,highres,1920x0,1 # office
@@ -49,6 +50,12 @@ $fileManager = dolphin
 $menu = rofi -show drun
 $browser = vivaldi
 $music = spotify --enable-chrome-browser-cloud-management
+$power = ~/.dotfiles/scripts/power-menu.sh
+$powerprofile = ~/.dotfiles/scripts/power-profile.sh
+$workspace_rofi = ~/.dotfiles/scripts/hyprworkspaces.sh
+$pavucontrol_mic = ~/.dotfiles/scripts/sources.sh
+$pavucontrol_speaker = ~/.dotfiles/scripts/sink.sh
+$wifi = ~/.dotfiles/scripts/network.sh
 
 
 #################
@@ -151,8 +158,8 @@ windowrulev2 = workspace 2, class:^(vivaldi-stable)$
 windowrulev2 = workspace 3, class:^(org.wezfurlong.wezterm)$
 windowrulev2 = workspace 3, class:^(pavucontrol)$
 
-workspace = 1,monitor:DP-8
-workspace = 2,monitor:DP-8
+workspace = 1,monitor:DP-9
+workspace = 2,monitor:DP-9
 workspace = 3,monitor:DP-10
 workspace = 4,monitor:eDP-1
 
@@ -231,14 +238,20 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, b, exec, ghostty
+bind = $mainMod, semicolon, exec, $workspace_rofi
+bind = $mainMod, x, exec, $wifi
+bind = $mainMod, u, exec, $pavucontrol_speaker
+bind = $mainMod SHIFT, u, exec, $pavucontrol_mic
 bind = $mainMod, n, exec, makoctl dismiss -a
 bind = $mainMod, o, exec, $terminal
 # bind = $mainMod, o, exec, [float;tile] wezterm start --always-new-process
 bind = $mainMod, i, exec, $music
 bind = $mainMod, d, exec, hyprlock
 bind = $mainMod, p, exec, $browser
-bind = $mainMod, f, exec, fullscreen
+bind = $mainMod, f, exec, hyprctl dispatch fullscreen
 bind = $mainMod, s, exec, $sound
+bind = $mainMod, m, exec, $power
+bind = $mainMod, t, exec, $powerprofile
 bind = ALT_SHIFT, W, killactive,
 bind = $mainMod, a, exit,
 bind = $mainMod, E, exec, $fileManager
@@ -296,7 +309,9 @@ bindm = $mainMod, mouse:273, resizewindow
 
 bind = , xf86audioraisevolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , xf86audiolowervolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle 
+bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && pkill -RTMIN+8 waybar
+bind = $mainMod, XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && pkill -RTMIN+8 waybar
 
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous 
