--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -237,7 +237,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, b, exec, ghostty
+# bind = $mainMod, b, exec, ghostty
 bind = $mainMod, semicolon, exec, $workspace_rofi
 bind = $mainMod, x, exec, $wifi
 bind = $mainMod, u, exec, $pavucontrol_speaker
@@ -264,6 +264,16 @@ bind = ALT_SHIFT, u, movewindow, l
 bind = ALT_SHIFT, p, movewindow, r
 bind = ALT_SHIFT, o, movewindow, u
 bind = ALT_SHIFT, i, movewindow, d
+
+# Resize window
+bind = $mainMod, b, submap, resize
+submap = resize
+binde = , l, resizeactive, 20 0
+binde = , h, resizeactive, -20 0
+binde = , k, resizeactive, 0 -20
+binde = , j, resizeactive, 0 20
+bind = , escape, submap, reset
+submap = reset
 
 # Move focus with mainMod + arrow keys
 bind = ALT_SHIFT, H, movefocus, l
