feat: kdeconnect and copy-paste manager

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -85,6 +85,9 @@ exec-once = hyprctl setCursor catppuccin-mocha-red-cursors 24
 exec-once = hyprcursor
 exec-once = fcitx5
 
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = kdeconnect-indicator
 # exec-once = hyprlock
 # exec-once = ibus-daemon -d -x -n wayland &
 
@@ -264,6 +267,7 @@ bind = ALT_SHIFT, u, movewindow, l
 bind = ALT_SHIFT, p, movewindow, r
 bind = ALT_SHIFT, o, movewindow, u
 bind = ALT_SHIFT, i, movewindow, d
+bind = $mainMod, y, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Resize window
 bind = $mainMod, b, submap, resize
