--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -65,20 +65,13 @@ $wifi = ~/.dotfiles/scripts/network.sh
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
 exec-once = nm-applet 
 exec-once = mako 
-# zvukovi
-# exec-once = sleep 5 && pipewire
-# exec-once = sleep 5 && wireplumber
-# exec-once = sleep 5 && pipewire-pulse
-#
+exec-once = systemctl --user start hyprpolkitagent
 # rijesenje za zuvk privremeno 
 exec-once = systemctl --user restart pipewire wireplumber pipewire-pulse
 #
 exec-once = xsettingsd
-# exec-once = sudo NetworkManager
-# exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = hyprctl setCursor catppuccin-mocha-red-cursors 24
