--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -56,6 +56,7 @@ $workspace_rofi = ~/.dotfiles/scripts/hyprworkspaces.sh
 $pavucontrol_mic = ~/.dotfiles/scripts/sources.sh
 $pavucontrol_speaker = ~/.dotfiles/scripts/sink.sh
 $wifi = ~/.dotfiles/scripts/network.sh
+$toggle_mako = ~/.dotfiles/scripts/toggle-mako.sh
 
 
 #################
@@ -239,6 +240,7 @@ bind = $mainMod, x, exec, $wifi
 bind = $mainMod, u, exec, $pavucontrol_speaker
 bind = $mainMod SHIFT, u, exec, $pavucontrol_mic
 bind = $mainMod, n, exec, makoctl dismiss -a
+bind = $mainMod SHIFT, n, exec, $toggle_mako && pkill -RTMIN+8 waybar
 bind = $mainMod, o, exec, $terminal
 # bind = $mainMod, o, exec, [float;tile] wezterm start --always-new-process
 bind = $mainMod, i, exec, $music
@@ -250,6 +252,7 @@ bind = $mainMod, m, exec, $power
 bind = $mainMod, t, exec, $powerprofile
 bind = ALT_SHIFT, W, killactive,
 bind = $mainMod, a, exit,
+bind = $mainMod, c, exec, makoctl history | jq -r '.data[0][] | "\(."app-name".data): \(.summary.data): \(.body.data)"' | rofi -dmenu -p "Notification history"
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
