--- a/status/waybar/config
+++ b/status/waybar/config
@@ -4,7 +4,7 @@
 		"margin-top": 10,
 		"height": 30,
 		"modules-left": ["cpu","memory"],
-		"modules-center": ["pulseaudio","clock","custom/mic"],
+		"modules-center": ["pulseaudio","clock", "custom/notifs", "custom/mic",],
 		"modules-right": ["battery","bluetooth","network", "hyprland/workspaces"],
 		"cpu": { 
 			"interval": 10, 
@@ -23,8 +23,8 @@
 				"critical": 5
 			},
 			"format": " {capacity}%",
-			"format-charging": " {capacity}% 󱐋",
-			"format-plugged": " {capacity}% ",
+			"format-charging": " 󱐋 {capacity}%",
+			"format-plugged": "  {capacity}%",
 		},
 		"clock": {
 			"format": "󰐝 {:%H:%M}",
@@ -53,6 +53,15 @@
 			"format": " {}",
 			"on-click": "pactl set-source-mute @DEFAULT_SOURCE@ toggle &&  pkill -RTMIN+8 waybar",
 			"on-click-right": "pavucontrol --tab=4",
+			"tooltip": false,
+			"signal": 8
+		},
+		"custom/notifs": {
+			"return-type":"json",
+			"exec": "~/.dotfiles/scripts/waybar-mako.sh",
+			"exec-on-event": true,
+			"format": " {}",
+			"on-click": "~/.dotfiles/scripts/toggle-mako.sh &&  pkill -RTMIN+8 waybar",
 			"tooltip": false,
 			"signal": 8
 		},
