feat: hyprland keybinds showcase using rofi

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -57,6 +57,7 @@ $pavucontrol_mic = ~/.dotfiles/scripts/sources.sh
 $pavucontrol_speaker = ~/.dotfiles/scripts/sink.sh
 $wifi = ~/.dotfiles/scripts/network.sh
 $toggle_mako = ~/.dotfiles/scripts/toggle-mako.sh
+$hypr_keybinds = ~/.dotfiles/scripts/hyprland-keybinds.sh
 
 
 #################
@@ -236,6 +237,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # bind = $mainMod, b, exec, ghostty
 bind = $mainMod, semicolon, exec, $workspace_rofi
+bind = $mainMod, slash, exec, $hypr_keybinds
 bind = $mainMod, x, exec, $wifi
 bind = $mainMod, u, exec, $pavucontrol_speaker
 bind = $mainMod SHIFT, u, exec, $pavucontrol_mic
