feat: hyprland bind kdeconnect share

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -58,6 +58,7 @@ $pavucontrol_speaker = ~/.dotfiles/scripts/sink.sh
 $wifi = ~/.dotfiles/scripts/network.sh
 $toggle_mako = ~/.dotfiles/scripts/toggle-mako.sh
 $hypr_keybinds = ~/.dotfiles/scripts/hyprland-keybinds.sh
+$kdeconnect_share = ~/.dotfiles/scripts/kdeconnect-share.sh
 
 
 #################
@@ -237,6 +238,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # bind = $mainMod, b, exec, ghostty
 bind = $mainMod, semicolon, exec, $workspace_rofi
+bind = $mainMod, q, exec, $kdeconnect_share
 bind = $mainMod, slash, exec, $hypr_keybinds
 bind = $mainMod, x, exec, $wifi
 bind = $mainMod, u, exec, $pavucontrol_speaker
