--- a/status/waybar/config
+++ b/status/waybar/config
@@ -5,7 +5,7 @@
 		"height": 30,
 		"modules-left": ["cpu","memory"],
 		"modules-center": ["pulseaudio","clock", "custom/notifs", "custom/mic",],
-		"modules-right": ["battery","bluetooth","network", "hyprland/workspaces"],
+		"modules-right": ["battery", "custom/kdec", "bluetooth", "network", "hyprland/workspaces"],
 		"cpu": { 
 			"interval": 10, 
 			"format": "󰻠 {usage}%" 
@@ -55,6 +55,13 @@
 			"on-click-right": "pavucontrol --tab=4",
 			"tooltip": false,
 			"signal": 8
+		},
+		"custom/kdec": {
+			"return-type":"json",
+			"exec": "~/.dotfiles/scripts/waybar-kdeconnect.sh",
+			"interval": 10,
+			"format": " {}",
+			"tooltip": false
 		},
 		"custom/notifs": {
 			"return-type":"json",
