feat: custom commands in nixos

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -50,15 +50,15 @@ $fileManager = dolphin
 $menu = rofi -show drun
 $browser = vivaldi
 $music = spotify --enable-chrome-browser-cloud-management
-$power = ~/.dotfiles/scripts/power-menu.sh
-$powerprofile = ~/.dotfiles/scripts/power-profile.sh
-$workspace_rofi = ~/.dotfiles/scripts/hyprworkspaces.sh
-$pavucontrol_mic = ~/.dotfiles/scripts/sources.sh
-$pavucontrol_speaker = ~/.dotfiles/scripts/sink.sh
-$wifi = ~/.dotfiles/scripts/network.sh
-$toggle_mako = ~/.dotfiles/scripts/toggle-mako.sh
-$hypr_keybinds = ~/.dotfiles/scripts/hyprland-keybinds.sh
-$kdeconnect_share = ~/.dotfiles/scripts/kdeconnect-share.sh
+$power = power-menu
+$powerprofile = power-profile
+$workspace_rofi = hyprworkspaces
+$pavucontrol_mic = sources
+$pavucontrol_speaker = sink
+$wifi = network
+$toggle_mako = toggle-mako
+$hypr_keybinds = hyprland-keybinds
+$kdeconnect_share = kdeconnect-share
 
 
 #################
