--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -256,7 +256,7 @@ bind = $mainMod, m, exec, $power
 bind = $mainMod, t, exec, $powerprofile
 bind = ALT_SHIFT, W, killactive,
 bind = $mainMod, a, exit,
-bind = $mainMod, c, exec, makoctl history | jq -r '.data[0][] | "\(."app-name".data): \(.summary.data): \(.body.data)"' | rofi -dmenu -p "Notification history"
+bind = $mainMod, c, exec, rofi_mako_history
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
