--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -33,6 +33,9 @@ monitor=DP-9,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left
 # monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
 # monitor=HDMI-A-1,highres,1920x0,1 # office
 
+# office monitor
+monitor=DP-2,1920x1080@60,0x-1200,1 
+
 xwayland {
 force_zero_scaling = true
 }
