vsn_upgrade: nixos 24.11 -> 25.05

--- a/hyper/hyprland.conf
+++ b/hyper/hyprland.conf
@@ -25,7 +25,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,1920x1200@60,0x0,1.5 
+monitor=eDP-1,1920x1200@60,0x0,1
 monitor=DP-10,2560x1440@165,3000x0,1
 # monitor=DP-8,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
 monitor=DP-9,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left side
@@ -37,7 +37,7 @@ monitor=DP-9,1920x1080@60,1920x0,1,transform, 1 # vertical monitor from the left
 monitor=DP-2,1920x1080@60,0x-1200,1 
 
 xwayland {
-force_zero_scaling = true
+	force_zero_scaling = true
 }
 
 ###################
@@ -219,7 +219,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-	workspace_swipe = false
+	workspace = false
 }
 
 # Example per-device config
@@ -249,7 +249,7 @@ bind = $mainMod SHIFT, u, exec, $pavucontrol_mic
 bind = $mainMod, n, exec, makoctl dismiss -a
 bind = $mainMod SHIFT, n, exec, $toggle_mako && pkill -RTMIN+8 waybar
 bind = $mainMod, o, exec, $terminal
-# bind = $mainMod, o, exec, [float;tile] wezterm start --always-new-process
+# bind = $mainMod, o, exec, [float;tile] wezterm #start --always-new-process
 bind = $mainMod, i, exec, $music
 bind = $mainMod, d, exec, hyprlock
 bind = $mainMod, p, exec, $browser
